<resources>
    <string name="app_name">Rentalan</string>

    <!-- app -->
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="password">Password</string>
    <string name="not_have_account">Belum punya akun?</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="next">Lanjut</string>
    <string name="otp">Kode Verifikasi</string>
    <string name="otp_check">Silahkan periksa email untuk mendapatkan kode verifikasi</string>
    <string name="self_data">Data Diri</string>
    <string name="fill_in_self_data">Lengkapi data diri anda untuk dapat melanjutkan pendaftaran</string>
    <string name="search">Cari</string>
    <string name="keyword">Kata kunci</string>
    <string name="fill_data">Lengkapi data diri untuk dapat melakukan transaksi</string>
    <string name="account_created">Akun sukses dibuat</string>
    <string name="not_account_verified">Akun belum diverifikasi</string>
    <string name="account_verified">Akun telah terverifikasi</string>
    <string name="edit">Edit</string>
    <string name="verification">Verifikasi</string>
    <string name="save">Simpan</string>
    <string name="rent">Pinjam</string>
    <string name="add_product">Tambah Barang</string>
    <string name="image">Gambar</string>
    <string name="date_start">Mulai Tanggal</string>
    <string name="date_end">Hingga Tanggal</string>
    <string name="sum">Jumlah</string>
    <string name="total">Total</string>
    <string name="check_total">Cek Total</string>
    <string name="me">Akun</string>

    <!-- Fragment tags -->
    <string name="fragment_list_tag">List Fragment</string>

    <!-- main menu admin-->
    <string name="category">Kategori</string>
    <string name="product">Barang</string>
    <string name="my_product">Barangku</string>
    <string name="user">Pengguna</string>
    <!-- main menu -->
    <string name="home">Beranda</string>
    <string name="transaction">Transaksi</string>
    <string name="account">Akun</string>

    <!--activity detail-->
    <string name="user_detail">Detail Pengguna</string>
    <string name="user_face">Pas Photo</string>
    <string name="user_self">Foto Selfie</string>
    <string name="user_ktp">Foto KTP</string>
    <string name="user_profile_info">Informasi Profil</string>
    <string name="email">E-mail</string>
    <string name="surename">Nama Lengkap</string>
    <string name="username">Username</string>
    <string name="username_unique">Username tidak tersedia</string>
    <string name="email_unique">Email telah terdaftarkan</string>
    <string name="register_success">Silahkan login untuk lengkapi data diri</string>
    <string name="login_failed">Data yang dimasukkan tidak sesuai</string>
    <string name="user_notfound">User tidak ditemukan</string>
    <string name="phone">No. HP</string>
    <string name="gender">Gender</string>
    <string name="nik">NIK</string>
    <string name="birth">Tgl Lahir</string>
    <string name="user_address_info">Informasi Alamat</string>
    <string name="address">Alamat</string>
    <string name="city">Kota</string>
    <string name="province">Provinsi</string>
    <string name="message_verify_yet">Lengkapi data diri untuk dapat melakukan transaksi</string>
    <string name="message_verify">Selamat akun anda telah terverifikasi</string>

    <string name="decline">Tolak</string>
    <string name="active">Aktifkan</string>

    <string name="category_detail">Detail Kategori</string>

    <string name="product_is_rent">Barang Sedang Dipinjam</string>
    <string name="product_rent">Barang Dipinjam</string>
    <string name="product_return">Barang Dikembalikan</string>
    <string name="product_detail">Detail Barang</string>
    <string name="product_name">Nama</string>
    <string name="product_description">Deskripsi Barang</string>
    <string name="description">Deskripsi</string>
    <string name="product_per_day">/hari</string>
    <string name="product_per_day_price">Harga (/hari)</string>
    <string name="product_stock">Stok</string>
    <string name="product_late_charge">Denda</string>
    <string name="product_dp">Uang Muka</string>

    <string name="no_data">Data tidak tersedia</string>
    <string name="qty">Kuantitas</string>
    <string name="renter">Peminjam</string>

    <string name="select_source">Select source</string>
    <string name="permission_denied">Permission Denied</string>
    <string-array name="source_array">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>

</resources>
