<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_super_larger"
            android:src="@drawable/ic_success_blue"/>

        <TextView
            android:id="@+id/tv_success_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_larger"
            android:text="@string/account_created"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/fill_data"/>

        <Button
            android:id="@+id/bt_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_larger"
            android:background="@color/colorAccent"
            android:text="@string/next"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>
    </LinearLayout>
</layout>