<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_4_100"
            android:orientation="vertical">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/Toolbar"
                app:navigationIcon="@drawable/ic_left"
                app:title="@string/product_detail"/>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <android.support.constraint.ConstraintLayout
                    android:id="@+id/cl_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:id="@+id/ll_photo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@color/white"
                        android:paddingBottom="@dimen/spacing_small"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                            android:id="@+id/iv_product"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/image_width_large"
                            tools:ignore="ContentDescription"
                            android:src="@drawable/blibli"/>

                    <LinearLayout
                            android:weightSum="2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/spacing_normal"
                            android:orientation="horizontal">

                        <TextView
                                android:id="@+id/tv_product_name"
                                android:layout_weight="1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/twenty"
                                android:text="@string/product_name"/>

                        <LinearLayout
                                android:layout_weight="1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                            <TextView
                                    android:id="@+id/tv_product_price_day"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/spacing_extra_smaller"
                                    android:text="@string/product_per_day"/>

                            <TextView
                                    android:id="@+id/tv_product_price_dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:padding="@dimen/spacing_extra_smaller"
                                    android:text="@string/product_dp"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/spacing_small"
                        android:background="@color/white"
                        android:layout_marginTop="@dimen/spacing_smaller"
                        app:layout_constraintTop_toBottomOf="@+id/ll_photo"
                        app:layout_constraintStart_toStartOf="parent"
                        android:orientation="horizontal" android:id="@+id/constraintLayout">

                    <TextView
                            android:id="@+id/tv_user_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/user"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                            android:id="@+id/tv_city"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/city"
                            app:layout_constraintStart_toEndOf="@+id/tv_user_name"
                            app:layout_constraintHorizontal_bias="1"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                            android:id="@+id/tv_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone"
                            android:layout_marginTop="@dimen/spacing_small"
                            app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
                            app:layout_constraintStart_toStartOf="parent"/>

                </android.support.constraint.ConstraintLayout>

                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/product_description"
                          android:padding="@dimen/spacing_small"
                          app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                          app:layout_constraintStart_toStartOf="parent"
                          android:id="@+id/tv_description_label"/>

                <TableLayout android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@color/white"
                             app:layout_constraintTop_toBottomOf="@+id/tv_description_label">

                    <TableRow android:id="@+id/tr_product_detail"
                              android:padding="@dimen/spacing_normal">

                        <TextView
                                android:id="@+id/tv_category_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/category"/>

                        <TextView
                                android:id="@+id/tv_category"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Kamera"/>
                    </TableRow>
                </TableLayout>
            </android.support.constraint.ConstraintLayout>

        </ScrollView>

        <LinearLayout
                android:id="@+id/cl_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shadowColor="@color/black"
                android:background="@color/white_1_100"
                android:visibility="gone"
                android:orientation="horizontal"
                tools:visibility="visible">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/state_error"
                    android:text="@string/correction"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:padding="@dimen/spacing_small"/>

            <View
                    android:id="@+id/v_answer_separator"
                    android:layout_width="1dp"
                    android:layout_marginTop="@dimen/spacing_smaller"
                    android:layout_height="27dp"
                    android:background="@color/black_1_50"/>

            <TextView
                    android:id="@+id/tv_active"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/active"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:background="@color/white_1_100"/>

        </LinearLayout>
    </LinearLayout>
</layout>