<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bgcolor_white">

        <TextView
            android:id="@+id/rentalan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_extra_larger"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="21sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_larger"
            app:cardCornerRadius="@dimen/spacing_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rentalan">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/usernameInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimary"
                    android:layout_margin="@dimen/spacing_small">

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/spacing_extra_smaller"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:textSize="@dimen/abc_text_size_small_material"/>

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/bt_register"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="@dimen/spacing_larger"
            android:background="@color/colorAccent"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_larger"
            android:text="@string/have_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_register"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_small"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    </android.support.constraint.ConstraintLayout>

</layout>